k8s-manifest/django-app/django-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysite
  namespace: django-app
spec:
  selector:
    app: mysite
  ports:
    - port: 8000
      targetPort: 8000
      name: http
  type: ClusterIP
