k8s-manifest/django-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  namespace: django-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: django.local   # 실제 운영 시 도메인 변경
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-svc
                port:
                  number: 8000
